<?xml version="1.0"?>
<package format="2">
  <name>barn_ddr_bridge</name>
  <version>0.0.1</version>
  <description>Bridge package to run DDR-opt navigation stack on BARN benchmark (LaserScan to PointCloud2, CarState to Twist).</description>

  <maintainer email="user@todo.todo">BARN-DDR-opt</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>laser_geometry</build_depend>
  <build_depend>tf2_ros</build_depend>
  <build_depend>tf2_sensor_msgs</build_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>laser_geometry</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>tf2_sensor_msgs</exec_depend>
  <!-- CarState is from DDR-opt carstatemsgs; workspace must include DDR-opt packages -->
  <exec_depend>carstatemsgs</exec_depend>
</package>
